examples/test/testpolicy4730.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4730
  namespace: namespace219
spec:
  podSelector:
    matchLabels:
      key11: value30
      key48: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value40
          key23: value32
      podSelector:
        matchLabels:
          key47: value39
          key43: value2
          key33: value10
